Changes for java 8 compatibility (#424)
* Changes for java 8 target compatibility

* Use different substring fn